<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="#66ffffff"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/nigeria_j"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/england"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@color/score_display"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nigeria_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_dark"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"

                android:textSize="@dimen/score_size" />

            <TextView
                android:id="@+id/england_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_dark"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:textSize="@dimen/score_size" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lemon_green"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/let"
                />
            <TextView
                android:id="@+id/nigeria_let"
                android:layout_width="0dp"
                android:padding="5dp"
                android:textColor="@android:color/holo_red_dark"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/foul"
                />
            <TextView
                android:id="@+id/nigeria_foul"
                android:layout_width="0dp"
                android:padding="5dp"
                android:textColor="@android:color/holo_red_dark"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/let"
                />
            <TextView
                android:id="@+id/england_let"
                android:layout_width="0dp"
                android:padding="5dp"
                android:textColor="@android:color/holo_red_dark"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/foul"
                />
            <TextView
                android:id="@+id/england_foul"
                android:layout_width="0dp"
                android:padding="5dp"
                android:textColor="@android:color/holo_red_dark"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@android:color/white"
                    android:onClick="addPointToNigeria"
                    android:text="@string/_1_point" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:textColor="@android:color/white"
                    android:layout_marginRight="20dp"
                    android:onClick="letBallToNigeria"
                    android:text="@string/let_" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@android:color/white"
                    android:onClick="foulBallToNigeria"
                    android:text="@string/foul_" />
            </LinearLayout>
            <View
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@android:color/white">

            </View>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@android:color/white"
                    android:onClick="addPointForEngland"
                    android:text="@string/_1_point" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@android:color/white"
                    android:onClick="letBallToEngland"
                    android:text="@string/let_" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@android:color/white"
                    android:onClick="foulBallToEngland"
                    android:text="@string/foul_" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:onClick="resetScore"
        android:textColor="@android:color/white"
        android:text="@string/reset" />

</RelativeLayout>